# harper

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  biome.json  demo.md  docker-compose.dev.yml  docker-compose.yml  flake.nix  harper.php  justfile  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  report-false-positive.md  report-grammatical-error.md  suggest-a-feature.md
.github/workflows/: binaries.yml  build_chrome_plugin.yml  build_harper_binaries.yml  build_web.yml  chrome_plugin.yml  fuzz.yml  just-checks.yml  just_checks.yml  package_vscode_plugin.yml  package_wp_plugin.yml  precommit.yml  release_chrome_plugin.yml  release_harper_binaries.yml  release_vscode_plugin.yml  release_wp_plugin.yml  stale.yml  vscode_plugin.yml  wp_plugin.yml
harper-brill/: Cargo.toml  trained_chunker_model.json  trained_tagger_model.json
harper-brill/finished_chunker/: model.mpk  vocab.json
harper-brill/src/: lib.rs
harper-cli/: Cargo.toml
harper-cli/src/: annotate_tokens.rs  input.rs  main.rs
harper-comments/: Cargo.toml
harper-comments/src/: comment_parser.rs  masker.rs
harper-comments/src/comment_parsers/: go.rs  jsdoc.rs  lua.rs  mod.rs  solidity.rs  unit.rs
harper-comments/tests/: language_support.rs
harper-comments/tests/language_support_sources/: basic.clj  basic_kotlin.kt  clean.lua  clean.sol  dirty.lua  ignore_comments.sol  multiline_comments.sol
harper-core/: Cargo.toml  affixes.json  annotations.json  dictionary.dict  proper_noun_rules.json
harper-core/benches/: parse_demo.rs
harper-core/src/: char_ext.rs  char_string.rs  currency.rs  dict_word_metadata.rs  dict_word_metadata_orthography.rs  document.rs  fat_token.rs  ignored_lints.rs  language_detection.rs  lib.rs  number.rs  punctuation.rs  render_markdown.rs  span.rs  title_case.rs  token.rs  token_kind.rs  token_string_ext.rs  word_metadata.rs  word_metadata_orthography.rs
harper-core/src/expr/: all.rs  anchor_end.rs  anchor_start.rs  duration_expr.rs  expr_map.rs  first_match_of.rs  fixed_phrase.rs  longest_match_of.rs  mergeable_words.rs  mod.rs  optional.rs  reflexive_pronoun.rs  repeating.rs  sequence_expr.rs  similar_to_phrase.rs  space_or_hyphen.rs  spelled_number_expr.rs  step.rs  time_unit_expr.rs  unless_step.rs  word_expr_group.rs
harper-core/src/ignored_lints/: mod.rs
harper-core/src/lexing/: hostname.rs  mod.rs  url.rs
harper-core/src/linting/: a_part.rs  addicting.rs  adjective_double_degree.rs  adjective_of_a.rs  after_later.rs  all_intents_and_purposes.rs  am_in_the_morning.rs  amounts_for.rs  an_a.rs  another_thing_coming.rs  another_think_coming.rs  ask_no_preposition.rs  avoid_curses.rs  back_in_the_day.rs  be_allowed.rs  best_of_all_time.rs  boring_words.rs  bought.rs  cant.rs  capitalize_personal_pronouns.rs  cautionary_tale.rs  change_tack.rs  chock_full.rs  closed_compounds.rs  comma_fixes.rs  compound_nouns.rs  compound_subject_i.rs  compound_words.rs  confident.rs  correct_number_suffix.rs  criteria_phenomena.rs  currency_placement.rs  dashes.rs  despite_of.rs  determiner_without_noun.rs  didnt.rs  discourse_markers.rs  dollar_placement.rs  dot_initialisms.rs  double_click.rs  (+142 more)
harper-core/src/mask/: mod.rs
harper-core/src/parsers/: collapse_identifiers.rs  isolate_english.rs  markdown.rs  mask.rs  mod.rs  org_mode.rs  typst.rs
harper-core/src/patterns/: any_capitalization.rs  exact_phrase.rs  first_match_of.rs  fixed_phrase.rs  implies_quantity.rs  indefinite_article.rs  inflection_of_be.rs  longest_match_of.rs  mergeable_words.rs  mod.rs  modal_verb.rs  nominal_phrase.rs  noun_phrase.rs  pattern_map.rs  prepositional_preceder.rs  sequence_pattern.rs  similar_to_phrase.rs  singular_subject.rs  spelled_number_pattern.rs  time_unit_pattern.rs  upos_set.rs  within_edit_distance.rs  word.rs  word_pattern_group.rs  word_set.rs
harper-core/src/spell/: dictionary.rs  (+7 more)
harper-core/tests/: linters.rs  pos_tags.rs  run_tests.rs  snapshot.rs
harper-html/: Cargo.toml
harper-html/src/: lib.rs
harper-html/tests/: run_tests.rs
harper-ink/: Cargo.toml
harper-ink/src/: lib.rs
harper-ink/tests/: run_tests.rs
harper-jjdescription/: Cargo.toml
harper-jjdescription/src/: lib.rs
harper-jjdescription/tests/: run_tests.rs
harper-literate-haskell/: Cargo.toml
harper-literate-haskell/src/: lib.rs  masker.rs
harper-literate-haskell/tests/: run_tests.rs
harper-ls/: Cargo.toml  README.md
harper-ls/src/: backend.rs  config.rs  diagnostics.rs  dictionary_io.rs  document_state.rs  git_commit_parser.rs  io_utils.rs  main.rs  pos_conv.rs
harper-ls/src/stats/: lint_record.rs  lint_summary.rs  mod.rs
harper-pos-utils/: Cargo.toml
harper-pos-utils/src/: conllu_utils.rs  lib.rs  patch_criteria.rs  upos.rs  word_counter.rs
harper-pos-utils/src/chunker/: burn_chunker.rs  cached_chunker.rs  mod.rs  np_extraction.rs  upos_freq_dict.rs
harper-pos-utils/src/chunker/brill_chunker/: mod.rs  patch.rs
harper-pos-utils/src/tagger/: error_counter.rs  freq_dict.rs  freq_dict_builder.rs  mod.rs
harper-pos-utils/src/tagger/brill_tagger/: mod.rs  patch.rs
harper-python/: Cargo.toml
harper-python/src/: lib.rs
harper-python/tests/: run_tests.rs
harper-stats/: Cargo.toml
harper-stats/src/: lib.rs  lint_summary.rs  record.rs  summary.rs
harper-tree-sitter/: Cargo.toml
harper-tree-sitter/src/: lib.rs
harper-typst/: Cargo.toml
harper-typst/src/: lib.rs  offset_cursor.rs  typst_translator.rs
harper-typst/tests/: run_tests.rs  tests.rs
harper-wasm/: Cargo.toml
harper-wasm/src/: lib.rs
src/harper/: Box.ts  DataBlock.ts  HarperContext.ts  HarperContext.tsx  Highlight.tsx  Highlighter.tsx  LintList.tsx  LintListItem.tsx  LintSettingList.tsx  LintSettingRow.tsx  Logo.jsx  RichText.ts  SidebarControl.tsx  SidebarLintCard.tsx  SidebarTabContainer.tsx  SuggestionControl.tsx  domUtils.ts  gutenbergUtils.ts  index.css  index.tsx  lintUtils.ts  useElementPosition.ts  useFrameCount.ts  useIgnoredLintState.ts  useLintBoxes.ts  useLintConfig.ts
(+101 files in other folders)
