[package]
name = "harper-brill"
version = "0.71.0"
edition = "2024"
description = "The language checker for developers."
license = "Apache-2.0"
repository = "https://github.com/automattic/harper"

[dependencies]
harper-pos-utils = { path = "../harper-pos-utils/", version = "0.71.0" }
lazy_static = "1.5.0"
serde_json = "1.0.145"

[build-dependencies]
serde_json = "1.0.145"
