[package]
name = "harper-cli"
version = "0.1.0"
edition = "2024"
publish = false
repository = "https://github.com/automattic/harper"

[dependencies]
anyhow = "1.0.98"
ariadne = "0.4.1"
clap = { version = "4.5.42", features = ["derive", "string"] }
harper-stats = { path = "../harper-stats", version = "0.56.0" }
dirs = "6.0.0"
harper-literate-haskell = { path = "../harper-literate-haskell", version = "0.56.0" }
harper-core = { path = "../harper-core", version = "0.56.0" }
harper-pos-utils = { path = "../harper-pos-utils", version = "0.56.0", features = ["training", "threaded"] }
harper-comments = { path = "../harper-comments", version = "0.56.0" }
harper-typst = { path = "../harper-typst", version = "0.56.0" }
hashbrown = "0.15.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
strum = "0.27.2"
strum_macros = "0.27.2"

[features]
default = []
training = ["harper-pos-utils/training"]
