[package]
name = "harper-cli"
version = "0.1.0"
edition = "2024"
publish = false
repository = "https://github.com/automattic/harper"

[dependencies]
anyhow = "1.0.100"
ariadne = "0.4.1"
clap = { version = "4.5.48", features = ["derive", "string"] }
harper-stats = { path = "../harper-stats", version = "0.65.0" }
dirs = "6.0.0"
harper-literate-haskell = { path = "../harper-literate-haskell", version = "0.65.0" }
harper-core = { path = "../harper-core", version = "0.65.0" }
harper-pos-utils = { path = "../harper-pos-utils", version = "0.65.0", features = ["threaded"] }
harper-comments = { path = "../harper-comments", version = "0.65.0" }
harper-typst = { path = "../harper-typst", version = "0.65.0" }
hashbrown = "0.16.0"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
strum = "0.27.2"
strum_macros = "0.27.2"

[features]
default = []
training = ["harper-pos-utils/training"]
