[package]
name = "harper-comments"
version = "0.48.0"
edition = "2024"
description = "The language checker for developers."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/automattic/harper"

[dependencies]
harper-core = { path = "../harper-core", version = "0.48.0" }
harper-html = { path = "../harper-html", version = "0.48.0" }
harper-tree-sitter = { path = "../harper-tree-sitter", version = "0.48.0" }
itertools = "0.14.0"
tree-sitter = "0.25.6"
tree-sitter-bash = "0.25.0"
tree-sitter-c = "0.24.1"
tree-sitter-cmake = "0.7.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-go = "0.23.4"
tree-sitter-haskell = "0.23.1"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.23.1"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-lua = "0.2.0"
tree-sitter-nix = "0.0.2"
tree-sitter-php = "0.23.11"
tree-sitter-python = "0.23.6"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.24.0"
tree-sitter-scala = "0.24.0"
tree-sitter-solidity = "1.2.11"
tree-sitter-swift = "0.7.1"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-typescript = "0.23.2"
harper-tree-sitter-dart = "0.0.5"
tree-sitter-clojure = "0.1.0"

[dev-dependencies]
paste = "1.0.15"
