[package]
name = "harper-html"
version = "0.55.0"
edition = "2024"
description = "The language checker for developers."
license = "Apache-2.0"
repository = "https://github.com/automattic/harper"

[dependencies]
harper-core = { path = "../harper-core", version = "0.55.0" }
harper-tree-sitter = { path = "../harper-tree-sitter", version = "0.55.0" }
tree-sitter-html = "0.23.2"
tree-sitter = "0.25.8"

[dev-dependencies]
paste = "1.0.15"
