[package]
name = "harper-ls"
version = "0.59.0"
edition = "2024"
description = "The language checker for developers."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/automattic/harper"

[dependencies]
harper-stats = { path = "../harper-stats", version = "0.59.0" }
harper-literate-haskell = { path = "../harper-literate-haskell", version = "0.59.0" }
harper-core = { path = "../harper-core", version = "0.59.0", features = ["concurrent"] }
harper-comments = { path = "../harper-comments", version = "0.59.0" }
harper-typst = { path = "../harper-typst", version = "0.59.0" }
harper-html = { path = "../harper-html", version = "0.59.0" }
tower-lsp-server = "0.22.1"
tokio = { version = "1.47.1", features = ["fs", "rt", "rt-multi-thread", "macros", "io-std", "io-util", "net"] }
clap = { version = "4.5.43", features = ["derive"] }
once_cell = "1.21.3"
dirs = "6.0.0"
anyhow = "1.0.99"
serde_json = "1.0.142"
itertools = "0.14.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
resolve-path = "0.1.0"
open = "5.3.0"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
indexmap = { version = "2.10.0", features = ["serde"] }
globset = "0.4.16"

[features]
default = []
