[package]
name = "harper-pos-utils"
version = "0.55.0"
edition = "2024"
description = "The language checker for developers."
license = "Apache-2.0"
repository = "https://github.com/automattic/harper"

[dependencies]
rs-conllu = "0.3.0"
hashbrown = { version = "0.15.3", features = ["serde"] }
strum = "0.27.2"
strum_macros = "0.27.2"
serde = { version = "1.0.219", features = ["derive"] }
is-macro = "0.3.7"
rayon = { version = "1.10.0", optional = true }
rand = { version = "0.9.1", optional = true }
burn = { version = "0.18.0", default-features = false, features = ["std"] }
burn-ndarray = { version = "0.18.0", default-features = false }
serde_json = "1.0.142"
itertools = "0.14.0"
lru = "0.16.0"

[features]
default = []
threaded = ["dep:rayon"]
training = ["dep:rand", "burn/train", "burn/autodiff"]
