[package]
name = "harper-pos-utils"
version = "0.71.0"
edition = "2024"
description = "The language checker for developers."
license = "Apache-2.0"
repository = "https://github.com/automattic/harper"

[dependencies]
rs-conllu = "0.3.0"
hashbrown = { version = "0.16.0", features = ["serde"] }
strum = "0.27.2"
strum_macros = "0.27.2"
serde = { version = "1.0.228", features = ["derive"] }
is-macro = "0.3.7"
rand = { version = "0.9.1", optional = true }
burn = { version = "0.19.0", default-features = false, features = ["std"] }
burn-ndarray = { version = "0.19.0", default-features = false }
serde_json = "1.0.145"
lru = "0.16.2"
rayon = { version = "1.11.0", optional = true }

[features]
default = []
training = ["dep:rand", "burn/train", "burn/autodiff"]
threaded = ["dep:rayon"]
