[package]
name = "harper-stats"
version = "0.17.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
harper-core = { path = "../harper-core", version = "0.17.0", features = ["concurrent"] }
uuid = { version = "1.12.0", features = ["serde", "v4"] }
csv = "1.3.1"
