[package]
name = "harper-stats"
version = "0.26.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
harper-core = { path = "../harper-core", version = "0.26.0", features = ["concurrent"] }
uuid = { version = "1.12.0", features = ["serde", "v4"] }
serde_json = "1.0.140"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[features]
default = []
js = ["uuid/js"]
